# robo

./: Dockerfile  LICENSE  README.md  SECURITY.md  core_agent_lines.sh  docker-compose.yml  feeds.txt  pyproject.toml  server.py
bridge/: package.json
bridge/src/: index.ts  whatsapp.ts
nanobot/: server.py
nanobot/providers/: registry.py
pandaemon/: __init__.py
pandaemon/agent/: __init__.py  context.py  memory.py  skills.py  subagent.py
pandaemon/bus/: __init__.py  queue.py
pandaemon/channels/: __init__.py  base.py  email.py  manager.py  telegram.py  whatsapp.py
pandaemon/config/: __init__.py  loader.py  paths.py  schema.py
pandaemon/cron/: __init__.py  service.py
pandaemon/heartbeat/: __init__.py  service.py
pandaemon/providers/: __init__.py  abacus_provider.py  custom_provider.py  registry.py
scripts/: gardener.py  mycelium.py
tests/: test_azure_openai_provider.py  test_base_channel.py  test_cli_input.py  test_commands.py  test_config_migration.py  test_config_paths.py  test_consolidate_offset.py  test_context_prompt_cache.py  test_cron_service.py  test_dingtalk_channel.py  test_docker.sh  test_email_channel.py  test_feishu_post_content.py  test_feishu_table_split.py  test_heartbeat_service.py  test_loop_consolidation_tokens.py  test_loop_save_turn.py  test_matrix_channel.py  test_mcp_tool.py  test_memory_consolidation_types.py  test_message_tool.py  test_message_tool_suppress.py  test_provider_retry.py  test_qq_channel.py  test_skill_creator_scripts.py  test_slack_channel.py  test_task_cancel.py  test_telegram_channel.py  test_tool_validation.py
(+35 files in other folders)
