[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pandaemon"
version = "1.0.0"
description = "Cognitive OS Daemon and Local-First Agentic System"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Pandaemon Architect" }
]
dependencies = [
    # Gateway e Webhook (The Secretariat)
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-telegram-bot>=20.7",
    
    # Motor Cognitivo e Provedores (Kernel)
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    
    # Sistema de Arquivos e Metadados (Obsidian Tool)
    "aiofiles>=23.2.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # RAG e Banco Vetorial Local (The Gardener)
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    
    # Automação Web (Black Ops)
    "playwright>=1.41.0",
    
    # Coleta de Dados (The Mycelium)
    "feedparser>=6.0.11",
    
    # Utilidades Base
    "typing-extensions>=4.9.0"
]

[tool.hatch.build.targets.wheel]
packages = ["pandaemon"]
